<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- header -->
    <TextView
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/panic_settings_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_20sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.rey.material.widget.Button
                android:id="@+id/btnSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_contact"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                app:rd_rippleType="touch"
                android:textSize="@dimen/_14sdp"
                app:rd_maxRippleRadius="match_view"
                fontPath="fonts/Roboto-Light.ttf"
                app:rd_enable="true"/>

            <com.rey.material.widget.Button
                android:id="@+id/btnClose"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:text="@string/close"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                app:rd_enable="true"
                app:rd_maxRippleRadius="match_view"
                app:rd_rippleType="touch" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNoContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_above="@id/llMenu"
            android:text="@string/no_contacts"
            android:textSize="@dimen/_20sdp" />

        <ListView
            android:id="@+id/lvContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/llMenu"
            android:visibility="gone">

        </ListView>

    </RelativeLayout>

</LinearLayout>