<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <!-- header -->
        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/block_this_report"
            android:textColor="@color/report_button_bg"
            android:textSize="@dimen/_25sdp" />

        <!-- remarks -->
        <EditText
            android:id="@+id/etRemarks"
            android:background="@drawable/line_border_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/remarks"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <com.rey.material.widget.Button
            android:id="@+id/btnBlock"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/report_button_bg"
            android:text="@string/block"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

        <com.rey.material.widget.Button
            android:id="@+id/btnCancelReport"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/report_button_bg_dark"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

    </LinearLayout>

</LinearLayout>
