<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <!-- header -->
    <TextView
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/file_incident_report_header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_25sdp" />

    <!-- incident description -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle">

        <EditText
            android:id="@+id/etIncidentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/incident_description"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp" />
    </android.support.design.widget.TextInputLayout>


    <!-- location -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle">

        <EditText
            android:id="@+id/etIncidentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/incident_address"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:paddingTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp" />
    </android.support.design.widget.TextInputLayout>

    <!-- select incident type -->
    <com.rey.material.widget.Spinner
        android:id="@+id/spnrIncidentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:dropDownWidth="match_parent"
        app:rd_style="@style/Material.Drawable.Ripple.Wave"
        app:spn_arrowAnimDuration="@android:integer/config_shortAnimTime"
        app:spn_arrowColor="@color/colorPrimary"
        app:spn_arrowInterpolator="@android:anim/decelerate_interpolator"
        app:spn_arrowPadding="@dimen/_5sdp"
        app:spn_arrowSize="@dimen/_5sdp"
        app:spn_arrowSwitchMode="true"
        app:spn_label="@string/select_incident_type"
        app:spn_labelEnable="true"
        app:spn_labelTextColor="@color/colorPrimary"
        app:spn_popupItemAnimOffset="60"
        app:spn_popupItemAnimation="@anim/abc_grow_fade_in_from_bottom" />

    <!-- images -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAddPhoto"
            android:layout_width="@dimen/_80sdp"
            android:background="@drawable/line_border_gray"
            android:gravity="center"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvImages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="LinearLayoutManager" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            android:id="@+id/btnFileReport"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/file"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:rd_rippleType="touch"
            android:textSize="@dimen/_14sdp"
            app:rd_maxRippleRadius="match_view"
            fontPath="fonts/Roboto-Light.ttf"
            app:rd_enable="true"/>

        <com.rey.material.widget.Button
            android:id="@+id/btnCancelReport"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            app:rd_rippleType="touch"
            android:textSize="@dimen/_14sdp"
            app:rd_maxRippleRadius="match_view"
            fontPath="fonts/Roboto-Light.ttf"
            app:rd_enable="true"/>

    </LinearLayout>

</LinearLayout>

