<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <!-- header -->
        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/announcement_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_25sdp" />

        <!-- news title -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/news_title"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>


        <!-- news content -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <com.rey.material.widget.Button
            android:id="@+id/btnAnnounce"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:text="@string/announce"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

        <com.rey.material.widget.Button
            android:id="@+id/btnCancel"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

    </LinearLayout>

</LinearLayout>

