<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="@dimen/_10sdp">


    <TextView
        fontPath="fonts/Roboto-Medium.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_25sdp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/FieldsStyle"
        app:hintTextAppearance="@style/FloatingLabelStyle">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_10sdp" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/FieldsStyle"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintTextAppearance="@style/FloatingLabelStyle">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingTop="@dimen/_10sdp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10sdp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        app:elevation="@dimen/_10sdp"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/next"
        app:rippleColor="@color/colorPrimaryDark"
        android:layout_height="wrap_content"/>

</LinearLayout>

